fix sidebar z-index

--- a/public/css/factura.css
+++ b/public/css/factura.css
@@ -31,14 +31,14 @@ body {
   max-height: 105mm;
   max-width: 187mm;
   left: 13mm;
-  top: 82mm;
+  top: 83mm;
 }
 
 .productos_a5 {
   max-height: 64mm;
   max-width: 190mm;
   left: 9mm;
-  top: 48mm;
+  top: 49mm;
 }
 
 .iva {
